# EAR-GUI

./: .gitignore  Dockerfile  LICENSE  README.md
ear-gui-core/: MANIFEST.in  requirements.txt  setup.cfg  setup.py  tox.ini
ear-gui-core/etc/: ear-gui-core.ini  nginx.conf  server.crt  server.key  template.conf
ear-gui-core/lico/ear/: __init__.py
ear-gui-core/lico/ear/conf/: __init__.py  etc.py  factory.py  resource.py
ear-gui-portal/: README.md  babel.config.js  package.json  vue.config.js
ear-gui-portal/config/: index.js
ear-gui-portal/public/: index.html
ear-gui-portal/src/: App.vue  main.js
ear-gui-portal/src/assets/css/: index.css
ear-gui-portal/src/assets/lang/: en.json
ear-gui-portal/src/common/: session.js  utils.js
ear-gui-portal/src/components/: demo.vue
ear-gui-portal/src/router/: route.js
ear-gui-portal/src/service/: config.js
ear-gui-portal/src/settings/: antdMsg.js  http.js  messages.js
ear-gui-portal/src/storage/: setting-module.js  store.js
ear-gui-portal/src/view/: create.vue  home.vue  main.vue
ear-gui-portal/src/view/create/: params-content.vue
ear-gui-portal/src/view/create/dialog/: island_dialog.vue  preview_dialog.vue  security_dialog.vue  special_nodes_dialog.vue
ear-gui-portal/src/view/create/params-content/: common.vue  database.vue  ear_d.vue  ear_dbd.vue  ear_gm.vue  ear_l.vue  island.vue  other_plugins.vue  policy.vue  security.vue  special_nodes.vue
